   REST API is enabled via ``es.api.enabled`` setting.

  - Updated Elasticsearch to v5.4.3.

 - Enabled ``mapping.total_fields.limit`` setting for tables in order to be
   able to increase maximum number of columns higher than the default of
   ``1000``.

 - Table functions now support value expressions as arguments.

Fixes
=====

 - Fixed an issue that prevented CrateDB from starting when ``path.home`` was
   set via command line argument.

 - Fixed an issue causing ``JOINs`` on virtual tables (sub-selects) which
   contain ``LIMIT`` and/or ``OFFSET`` to return incorrect results.
   E.g.::

      SELECT * FROM
        (SELECT * FROM t1 ORDER BY a LIMIT 5) t1,
      JOIN
        (SELECT * FROM t2 ORDER BY b OFFSET 2) t2
      ON t1.a = t2.max

 - Fixed an issue causing ``JOINs`` with aggregations on virtual tables
   (sub-selects) which also contain aggregations to return incorrect results.
   E.g.::

     SELECT t1.a, COUNT(*) FROM t1
     JOIN (SELECT b, max(i) as max FROM t2 GROUP BY b) t2
     ON t1.a = t2.max
     GROUP BY t1.id

 - Fixed the error message to be more descriptive when the condition in a
   `CASE/WHEN` expression is not a boolean.

 - Fixed an issue which caused an exception if ``EXPLAIN`` is used on a
   statement that uses the ``ANY (array_expression)`` operator.

 - Allow support of conditional expression with different return types that can
   be converted to a single return type.

 - Fixed support for negate on null in conditional expression.

 - Fixed support for setting ``write.wait_for_active_shards`` on a partitioned
   table.

 - Added missing documentation about the default value of the table setting
   ``write.wait_for_active_shards``.

 - Improved user privileges matching to constant time complexity.

 - Improved the error message if an invalid table column reference is used in
   ``INSERT`` statements.

 - Optimized the algorithm that determines the best ordering of the tables in
   a ``JOIN``.
